feat: ai saasv1.0.0

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "build:docker": "SKIP_ENV_VALIDATION=true next build",
     "start": "next start",
     "lint": "biome check --write .",
     "lint:check": "biome check .",
